tests/baselines/reference/commentOnImportStatement1.errors.txt
commentOnImportStatement1.ts(3,22): error TS2792: Cannot find module './foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?


==== commentOnImportStatement1.ts (1 errors) ====
    /* Copyright */
    
    import foo = require('./foo');
                         ~~~~~~~
!!! error TS2792: Cannot find module './foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    